--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,5 @@ project(p5)
 
 set(CMAKE_CXX_STANDARD 11)
 
-set(SOURCE_FILES CPUTimer.h evac.cpp evac.h EvacRunner.cpp EvacRunner.h MyCity.cpp MyCity.h MyRoad.cpp MyRoad.h)
+set(SOURCE_FILES CPUTimer.h evac.cpp evac.h EvacRunner.cpp EvacRunner.h)
 add_executable(p5 ${SOURCE_FILES})
